# LedgerAlps

./: .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: lint.yml  release.yml  test.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py  main.py  swiss.py
backend/app/core/: compliance.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/seeds/: chart_of_accounts.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/accounting/: journal.py
backend/app/services/exports/: accounting.py
backend/app/services/invoicing/: pdf.py  service.py
backend/app/services/swiss_standards/: iso20022_camt.py  iso20022_pain001.py  qr_invoice.py
backend/app/services/vat/: calculator.py
backend/app/templates/invoices/: invoice.html.j2
backend/tests/integration/: test_api.py
backend/tests/unit/: test_swiss_standards.py  test_vat.py
cmd/cli/: main.go
cmd/launcher/: main.go
cmd/server/: main.go
docker/nginx/: nginx.conf
docs/: ARCHITECTURE.md  PRODUCTION.md  SESSION_RECAP.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
installer/: ledgeralps.iss
scripts/: generate-certs.sh  install.ps1  install.sh
version/: version.go
(+81 files in other folders)
